2006-06-12  Dai Sato  <satodai@w3m.jp>

	* another fix for [w3m-dev-en 01067] Some more patches
	* file.c (loadBuffer): avoid decoding when dump_extra option is specified.

2006-06-10  Dai Sato  <satodai@w3m.jp>

	* fix for [w3m-dev-en 01067] Some more patches
	* file.c (loadGeneralFile): avoid decoding when dump_extra option is specified.

2006-06-10  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 03992] Change to display progress status when dump_extra option is specified
	* file.c (loadHTMLstream): Show progress status when dump_extra option is specified.

2006-06-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04129] handling newlines in form values 
	* parsetagx.c: don't delete newlines in hidden values.

2006-05-29  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01067] Some more patches
	* file.c, html.h, url.c: decode content-encoding in all situations.

2006-05-29  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01067] Some more patches
	* main.c: delete calls to GC from wrap_GC_warn_proc to avoid deadlocks.

2006-05-29  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01067] Some more patches
	* main.c: fix unsafe usages of SIGWINCH handler.

2006-05-29  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01067] Some more patches
	* keybind(_lynx).c, doc(-jp)/keymap.default: add SHIFT-TAB as a default binding for PREV_LINK.

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04154] Unclosed textarea in table
	* table.c: close textarea when table related tags found.

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04153] NEXT_LINK error
	* anchor.c, filc.c, fm.h: check A tag in HTMLlineproc2body().

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04152] [PATCH] Add more explanation for the usage of the option setting panel.
	* doc(-jp)/FAQ.html, doc-jp/MANUAL.html: add explanations for .w3m/config and -o option.

2006-04-08  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04150] vi-prec_num
	* main.c: fix vi_prec_num switching.

2006-04-08  Dai Sato  <satodai@w3m.jp>
