@@ -1,3 +1,9 @@
+2006-08-07  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* mailcap.c (acceptableMimeTypes): change default accept: line
+	    w3m should prefer text/html to other text/*.
+	    reported as Debian Bug#374296
+
 2006-06-12  Dai Sato  <satodai@w3m.jp>
 
 	* another fix for [w3m-dev-en 01067] Some more patches
